@@ -186,6 +186,8 @@ static bool c_ast_visitor_english( c_ast_t *ast, void *data ) {
     case K_ENUM_CLASS_STRUCT_UNION:
       FPRINTF( eout, "%s ", c_type_name( &ast->type ) );
       c_sname_english( &ast->as.ecsu.ecsu_sname, eout );
+      if ( ast->as.ecsu.of_ast != NULL )
+        FPRINTF( eout, " %s %s ", L_OF, L_TYPE );
       break;
 
     case K_NAME:
