@@ -1,0 +1,1 @@
+define E as enumeration E of type int
