@@ -1,0 +1,1 @@
+declare x as enumeration E of type unsigned int
