@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain enum E : double x @ 65
