@@ -1,0 +1,1 @@
+cdecl @ @ @ explain enum E : int x @ 0
