@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain enum E : size_t x @ 0
